--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": false,
   "homepage": "",
   "dependencies": {
+    "axios": "^0.18.1",
     "bootstrap": "4.3.1",
     "chart.js": "2.7.2",
     "classnames": "^2.2.6",
@@ -18,11 +19,13 @@
     "react-ga": "^2.5.7",
     "react-icons": "^3.5.0",
     "react-infinite-calendar": "^2.3.1",
+    "react-json-pretty": "^2.2.0",
     "react-notification-system": "^0.2.17",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-simple-maps": "^0.12.1",
     "react-sizeme": "^2.5.2",
+    "react-toastify": "^5.1.0",
     "reactstrap": "^7.1.0",
     "victory": "^32.0.0"
   },
